--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   </head>
   <body>
     <h1>U2-W3-D1</h1>
+
+    <form id="petForm">
+      <label for="petName">Name:</label><br />
+      <input type="text" id="petName" name="petName" /><br />
+
+      <label for="ownerName">Owner Name:</label><br />
+      <input type="text" id="ownerName" name="ownerName" /><br />
+
+      <label for="species">Species:</label><br />
+      <input type="text" id="species" name="species" /><br />
+
+      <label for="breed">Breed:</label><br />
+      <input type="text" id="breed" name="breed" /><br />
+
+      <input type="submit" value="Add Pet" />
+    </form>
+
     <script src="./script.js"></script>
   </body>
 </html>
